# medical-multimodal-ai

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  copilot_prompt.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260314_0001_create_jobs.py
api/: main.py
api/dependencies/: auth.py
api/routers/: analyze.py
api/schemas/: requests.py  responses.py
data/: db.py  db_models.py  repository.py  schemas.py  validation.py
infrastructure/kubernetes/: api-deployment.yaml  postgres-deployment.yaml  redis-deployment.yaml  worker-deployment.yaml
infrastructure/security/: README.md
mlops/: experiment_tracking.py  model_registry.py  retraining_pipeline.py
models/audio/: exam_audio_transcriber.py
models/fusion/: multimodal_discrepancy_detector.py
models/nlp/: medical_report_parser.py
models/vision/: exam_action_recognition.py
pipelines/: ingestion_pipeline.py  orchestration_pipeline.py  preprocessing_pipeline.py
reporting/: discrepancy_report_generator.py
scripts/: bootstrap.sh  generate_jwt.py  migrate.sh  run_local.sh
tests/e2e/: test_api_routes.py
tests/integration/: test_orchestration_pipeline.py
tests/unit/: test_fusion_detector.py  test_nlp_parser.py
utils/: config.py  errors.py  logging.py  security.py  tracing.py
workers/: celery_app.py  tasks.py
